<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_homeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_productCategoriesFragment"
        android:icon="@drawable/ic_label_black_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/nav_searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/nav_cartFragment"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/nav_userProfileFragment"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />


</menu>
