<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfilePageFragments.EditeDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/update_profile_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/update_fname"
                        android:layout_width="0dp"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="5dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        tools:ignore="Autofill" />

                    <EditText
                        android:id="@+id/update_lname"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="5dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        tools:ignore="Autofill" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/update_gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rounded_shape_grey_strok"
                    android:entries="@array/gender" />

                <EditText
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    tools:ignore="Autofill" />
                <TextView
                    android:id="@+id/textDateUpdate"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="5dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rounded_shape_grey_strok"
                    android:gravity="center_vertical"
                    android:hint="@string/select_your_birth_date"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/material_red_corner_btn"
                    android:text="@string/update"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/add_address_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/if_you_need_to_add_new_address_please_click_here"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/orange_500"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/city_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_shape_grey_strok" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/subCity_spinner"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_shape_grey_strok" />

                </LinearLayout>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/enter_new_address"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/building"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/enter_building"
                    android:inputType="number"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/apartment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:hint="@string/enter_apartment"
                    android:inputType="number"
                    tools:ignore="Autofill" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_updateAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@drawable/material_red_corner_btn"
                    android:text="@string/add_new_address"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>