<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FawryFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/spacing_mlarge"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/name"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:hint="@string/enter_your_name"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/email"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/phone"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle"
                    android:hint="@string/enter_your_phone"
                    android:inputType="phone"
                    tools:ignore="Autofill" />

                <RadioGroup
                    android:id="@+id/payment_group"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_middle"
                    android:paddingRight="@dimen/spacing_middle">

                    <RadioButton
                        android:id="@+id/fawry_cash"
                        android:checked="true"
                        android:text="@string/pay_with_cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/fawry_visa"
                        android:text="@string/pay_with_visa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>

                <Button
                    android:id="@+id/bt_submit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:background="@drawable/btn_rounded_red"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

        </WebView>

    </RelativeLayout>

</FrameLayout>