<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MhfztyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/you_have_in_your_pocket_money"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_10sdp"
            tools:text="100 LE"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/payBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/money"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/btn_rounded_red"
            android:gravity="center"
            android:text="@string/pay"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/payBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/you_can_charge_your_pocket_money"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:alpha="0"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/text2"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/visaImage"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/visa"
                    tools:ignore="ContentDescription" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chargeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/_12sdp"
                    android:background="@color/orange_500"
                    android:text="@string/charge"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>


</FrameLayout>